@@ -62,7 +62,7 @@ cmd_readmem_run (urj_chain_t *chain, char *params[])
         || urj_cmd_get_number (params[2], &len) != URJ_STATUS_OK)
         return URJ_STATUS_FAIL;
 
-    f = fopen (params[3], "w");
+    f = fopen (params[3], "wb");
     if (!f)
     {
         urj_error_IO_set (_("Unable to create file `%s'"), params[3]);
